--- a/js/routes/home.html
+++ b/js/routes/home.html
@@ -1,7 +1,10 @@
 <div class="home">
-   <h1>Hooker Faimly Memory Page</h1>
+   <br>
+   <br>
+   <br>
 
 
+   <h1>In Memory of Tracy Adam's</h1>
 
-
+      <h3>19?? to 2016</h3?
 </div>
