push morning work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="noprizeApp">
    <head>
       <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-      <title>Hook Memorie's</title>
+      <title>Tacy Adam's Memorial</title>
    </head>
    <body ng-controller="noprizeCtrl">
 
