--- a/js/routes/home.html
+++ b/js/routes/home.html
@@ -1,10 +1,7 @@
 <div class="home">
    <br>
-   <br>
-   <br>
-
-
    <h1>In Memory of Tracy Adam's</h1>
-
-      <h3>19?? to 2016</h3?
+   <img src="/img/main.jpg" style="height:300px;width:300px"/>
+      <h2>19?? to 2016</h2>
+      <br>
 </div>
