add photo slider

--- a/js/routes/home.html
+++ b/js/routes/home.html
@@ -1,7 +1,8 @@
 <div class="home">
-   <br>
-   <h1>In Memory of Tracy Adam's</h1>
-   <img src="/img/main.jpg" style="height:300px;width:300px"/>
+   <header>
+
+      <h1>In Memory of Tracy Adam's</h1>
+         <img src="/img/main.jpg" style="height:300px;width:300px"/>
       <h2>19?? to 2016</h2>
-      <br>
+   </header>
 </div>
