--- a/js/routes/memorial.html
+++ b/js/routes/memorial.html
@@ -1,1 +1,15 @@
-memorial page working
+<div class="home">
+   <h2>Leave a memory or comment below</h2>
+   <input placeholder="enter your name here...."></input>
+      <br>
+         <input placeholder="enter a memory here....."></input>
+            <br>
+               <button type="button" name="button">Submit</button>
+         <br>
+   after I hook up the server connections on firebase
+   comments and memories would appear here<br>
+   comments and memories would appear here<br>
+   comments and memories would appear here<br>
+   comments and memories would appear here<br>
+   comments and memories would appear here<br>
+</div>
