--- a/js/routes/photos.html
+++ b/js/routes/photos.html
@@ -1,1 +1,40 @@
-photos page working
+<div class="home">
+   <div id="container">
+          <header>
+           <h1>Photo's of Tracy Adam's</h1>
+           <p>more info goes here.....</p>
+          </header>
+
+
+         <div class="photobanner">
+          <img class="first" src="img/1.jpg" alt="" height="275" width="350" />
+          <img src="img/2.jpg" alt="" height="275" width="350"/>
+          <img src="img/3.jpg" alt="" height="275" width="350"/>
+          <img src="img/4.jpg" alt="" height="275" width="350"/>
+          <img src="img/5.jpg" alt="" height="275" width="350"/>
+          <img src="img/6.jpg" alt="" height="275" width="350"/>
+          <img src="img/7.jpg" alt="" height="275" width="350"/>
+          <!-- <img src="img/8.jpg" alt="" height="275" width="350"/> -->
+          <img src="img/9.jpg" alt="" height="275" width="350"/>
+          <img src="img/10.jpg" alt="" height="275" width="350"/>
+          <img src="img/11.jpg" alt="" height="275" width="350"/>
+          <img src="img/12.jpg" alt="" height="275" width="350"/>
+          <img src="img/13.jpg" alt="" height="275" width="350"/>
+          <img src="img/14.jpg" alt="" height="275" width="350"/>
+          <img src="img/15.jpg" alt="" height="275" width="350"/>
+          <img src="img/16.jpg" alt="" height="275" width="350"/>
+          <img src="img/17.jpg" alt="" height="275" width="350"/>
+          <img src="img/18.jpg" alt="" height="275" width="350"/>
+          <img src="img/19.jpg" alt="" height="275" width="350"/>
+          <img src="img/20.jpg" alt="" height="275" width="350"/>
+          <img src="img/21.jpg" alt="" height="275" width="350"/>
+          <img src="img/22.jpg" alt="" height="275" width="350"/>
+          <img src="img/23.jpg" alt="" height="275" width="350"/>
+          <img src="img/24.jpg" alt="" height="275" width="350"/>
+          <img src="img/25.jpg" alt="" height="275" width="350"/>
+          <img src="img/26.jpg" alt="" height="275" width="350"/>
+          <img src="img/27.jpg" alt="" height="275" width="350"/>
+
+         </div>
+      </div>
+</div>
