--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html ng-app="noprizeApp">
    <head>
       <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-      <link rel="stylesheet" href="/css/photo.css" media="screen" title="no title" charset="utf-8">
       <title>Tacy Adam's Memorial</title>
    </head>
    <body ng-controller="noprizeCtrl">
@@ -21,6 +20,11 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
 <!-- JQuery -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
+<!-- photo Carousel scripts  -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!-- firebase -->
+   <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 <!-- Local Scripts -->
       <script src="js/app.js"></script>
       <script src="js/ctrl.js"></script>
