--- a/js/routes/photos.html
+++ b/js/routes/photos.html
@@ -1,40 +1,177 @@
-<div class="home">
-   <div id="container">
-          <header>
-           <h1>Photo's of Tracy Adam's</h1>
-           <p>more info goes here.....</p>
-          </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Photo's</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <style>
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
+  </style>
+</head>
+<body>
 
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-target="#myCarousel" data-slide-to="5"></li>
+      <li data-target="#myCarousel" data-slide-to="6"></li>
+      <li data-target="#myCarousel" data-slide-to="7"></li>
+      <li data-target="#myCarousel" data-slide-to="8"></li>
+      <li data-target="#myCarousel" data-slide-to="9"></li>
+      <li data-target="#myCarousel" data-slide-to="10"></li>
+      <li data-target="#myCarousel" data-slide-to="11"></li>
+      <li data-target="#myCarousel" data-slide-to="12"></li>
+      <li data-target="#myCarousel" data-slide-to="13"></li>
+      <li data-target="#myCarousel" data-slide-to="14"></li>
+      <li data-target="#myCarousel" data-slide-to="15"></li>
+      <li data-target="#myCarousel" data-slide-to="16"></li>
+      <li data-target="#myCarousel" data-slide-to="17"></li>
+      <li data-target="#myCarousel" data-slide-to="18"></li>
+      <li data-target="#myCarousel" data-slide-to="19"></li>
+      <li data-target="#myCarousel" data-slide-to="20"></li>
+      <li data-target="#myCarousel" data-slide-to="21"></li>
+      <li data-target="#myCarousel" data-slide-to="22"></li>
+      <li data-target="#myCarousel" data-slide-to="23"></li>
+      <li data-target="#myCarousel" data-slide-to="24"></li>
+      <li data-target="#myCarousel" data-slide-to="25"></li>
+      <li data-target="#myCarousel" data-slide-to="26"></li>
+      <li data-target="#myCarousel" data-slide-to="27"></li>
+    </ol>
 
-         <div class="photobanner">
-          <img class="first" src="img/1.jpg" alt="" height="275" width="350" />
-          <img src="img/2.jpg" alt="" height="275" width="350"/>
-          <img src="img/3.jpg" alt="" height="275" width="350"/>
-          <img src="img/4.jpg" alt="" height="275" width="350"/>
-          <img src="img/5.jpg" alt="" height="275" width="350"/>
-          <img src="img/6.jpg" alt="" height="275" width="350"/>
-          <img src="img/7.jpg" alt="" height="275" width="350"/>
-          <!-- <img src="img/8.jpg" alt="" height="275" width="350"/> -->
-          <img src="img/9.jpg" alt="" height="275" width="350"/>
-          <img src="img/10.jpg" alt="" height="275" width="350"/>
-          <img src="img/11.jpg" alt="" height="275" width="350"/>
-          <img src="img/12.jpg" alt="" height="275" width="350"/>
-          <img src="img/13.jpg" alt="" height="275" width="350"/>
-          <img src="img/14.jpg" alt="" height="275" width="350"/>
-          <img src="img/15.jpg" alt="" height="275" width="350"/>
-          <img src="img/16.jpg" alt="" height="275" width="350"/>
-          <img src="img/17.jpg" alt="" height="275" width="350"/>
-          <img src="img/18.jpg" alt="" height="275" width="350"/>
-          <img src="img/19.jpg" alt="" height="275" width="350"/>
-          <img src="img/20.jpg" alt="" height="275" width="350"/>
-          <img src="img/21.jpg" alt="" height="275" width="350"/>
-          <img src="img/22.jpg" alt="" height="275" width="350"/>
-          <img src="img/23.jpg" alt="" height="275" width="350"/>
-          <img src="img/24.jpg" alt="" height="275" width="350"/>
-          <img src="img/25.jpg" alt="" height="275" width="350"/>
-          <img src="img/26.jpg" alt="" height="275" width="350"/>
-          <img src="img/27.jpg" alt="" height="275" width="350"/>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
 
-         </div>
+      <div class="item active">
+        <img src="img/1.jpg" width="400" height="345">
       </div>
+
+      <div class="item">
+        <img src="img/2.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/3.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/4.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/5.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/6.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/7.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/9.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/10.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/11.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/12.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/13.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/14.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/15.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/16.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/17.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/18.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/19.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/20.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/21.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/22.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/23.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/24.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/25.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/26.jpg" width="400" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img/27.jpg" width="400" height="345">
+      </div>
+
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
+
+</body>
+</html>
