--- a/js/routes/photos.html
+++ b/js/routes/photos.html
@@ -10,6 +10,7 @@
   <style>
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
+      height: 650px;
       width: 70%;
       margin: auto;
   }
@@ -56,15 +57,15 @@
     <div class="carousel-inner" role="listbox">
 
       <div class="item active">
-        <img src="img/1.jpg" width="400" height="345">
+        <img src="img/1.jpg" width="400" height="345" />
       </div>
 
       <div class="item">
-        <img src="img/2.jpg" width="400" height="345">
+        <img src="img/2.jpg" width="400" height="345" />
       </div>
 
       <div class="item">
-        <img src="img/3.jpg" width="400" height="345">
+        <img src="img/3.jpg" width="400" height="345" />
       </div>
 
       <div class="item">
