--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
       <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
       <title>Tacy Adam's Memorial</title>
    </head>
+   
    <body ng-controller="noprizeCtrl">
-
-      <nav-dir></nav-dir>
-
-      <ui-view></ui-view>
-
-      <foot-dir></foot-dir>
-
-
+      <div id='wrapper'>
+         <nav-dir></nav-dir>
+         <ui-view></ui-view>
+         <foot-dir></foot-dir>
+      </div>
 
 <!-- Angular Js -->
    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.js"></script>
@@ -23,8 +21,10 @@
 <!-- photo Carousel scripts  -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<!-- firebase -->
-   <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+<!-- Firebase -->
+   <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+<!-- AngularFire -->
+   <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 <!-- Local Scripts -->
       <script src="js/app.js"></script>
       <script src="js/ctrl.js"></script>
