--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html ng-app="noprizeApp">
    <head>
       <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-      <title>Tacy Adam's Memorial</title>
+      <title>tracy Adam's Memorial</title>
    </head>
-   
+
    <body ng-controller="noprizeCtrl">
       <div id='wrapper'>
          <nav-dir></nav-dir>
@@ -18,9 +18,6 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
 <!-- JQuery -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
-<!-- photo Carousel scripts  -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <!-- Firebase -->
    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 <!-- AngularFire -->
@@ -30,6 +27,8 @@
       <script src="js/ctrl.js"></script>
       <script src="js/routes/navDir.js"></script>
       <script src="js/routes/footDir.js"></script>
-      <script src="js/servc.js"></script>
+      <script src="js/photos.js">
+
+      </script>
    </body>
 </html>
