--- a/js/routes/navDir.html
+++ b/js/routes/navDir.html
@@ -1,5 +1,5 @@
 <div class="navDir">
-      <button class="navButton" ui-sref="home">Home</button>
-      <button class="navButton" ui-sref="photos">Photo's</button>
-      <button class="navButton" ui-sref="memorial">Guest Book</button>
+      <button class="Button" ui-sref="home">Home</button>
+      <button class="Button" ui-sref="photos">Photo's</button>
+      <button class="Button" ui-sref="memorial">Guest Book</button>
 </div>
