--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="noprizeApp">
    <head>
       <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-      <title>tracy Adam's Memorial</title>
+      <title>Tracy Adam's Memorial</title>
    </head>
 
    <body ng-controller="noprizeCtrl">
@@ -27,8 +27,6 @@
       <script src="js/ctrl.js"></script>
       <script src="js/routes/navDir.js"></script>
       <script src="js/routes/footDir.js"></script>
-      <script src="js/photos.js">
-
       </script>
    </body>
 </html>
