--- a/js/routes/footDir.html
+++ b/js/routes/footDir.html
@@ -1,3 +1,3 @@
 <div class="footer">
-   <a href="mailto:scott@scottabooth.com"><button class="footButton">Email Admin</button></a>
+   <a href="mailto:scott@scottabooth.com"><button class="footbutton">Email Admin</button></a>
 </div>
