--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="noprizeApp">
    <head>
       <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="/css/animate.css" media="screen" title="no title" charset="utf-8">
       <title>Tracy Adam's Memorial</title>
    </head>
 
@@ -16,8 +17,6 @@
    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.js"></script>
 <!-- UI Router -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
-<!-- JQuery -->
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
 <!-- Firebase -->
    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 <!-- AngularFire -->
