--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app="noprizeApp">
    <head>
       <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-      <link rel="stylesheet" href="/css/animate.css" media="screen" title="no title" charset="utf-8">
-      <title>Tracy Adam's Memorial</title>
+      <meta name=viewport content='width=700'>
+         <title>Tracy Adam's Memorial</title>
    </head>
 
    <body ng-controller="noprizeCtrl">
